# autocro

./: .gitignore  README.md  analysis.ipynb  config.example.yaml  program.md  pyproject.toml
adapters/: README.md  TEMPLATE.md
adapters/abtest/: fixture.md  growthbook.md  null.md  posthog.md
adapters/analytics/: fixture.md  ga4.md  null.md  plausible.md  posthog.md
adapters/heatmap/: clarity.md  fixture.md  null.md  posthog.md
fixtures/: analytics-sample.json  experiment-sample.json  heatmap-sample.json
fixtures/demo-target/: README.md  index.html  styles.css
harness/: check_path.py  check_results_row.py  judge-rubric.md  validate.py  yaml_to_json.py
harness/schemas/: abtest.json  analytics.json  config.json  heatmap.json
skills/: author-adapter.md  generate-variant.md  hypothesize.md  pre-validate.md  queue-review.md  rank.md  read-experiment.md  setup-check.md  simplicity-review.md  validate-adapter.md
variants/: README.md
