# autoresearch-web is a markdown-playbook framework executed by Claude Code (or
# a compatible agent harness). There is no Python runtime in the traditional
# sense — the `harness/*.py` helpers are stdlib-only tools invoked by markdown
# skills for deterministic validation (JSON-schema contract checks, deny-glob
# enforcement, results.tsv row checks). Nothing third-party is required or
# permitted here; the empty `dependencies` array is load-bearing.

[project]
name = "autoresearch-web"
version = "0.2.0"
description = "Autonomous conversion rate optimization research as a drop-in folder for any website project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.autoresearch-web]
runtime = "claude-code-markdown"
helpers_dir = "harness"
python_helpers = "stdlib-only"
entry_point = "program.md"
